login and signup form update

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<html>
+<body class="flex">
+    <div class="container">
+        <form   class="form">
+            <div class="header">
+                <h2 style="color:#9b59b6">Login </h2>
+            </div>
+            <div class="form-control-custom">
+                <label for="username">Email</label>
+                <input type="text" id="emailid" name="emailid" placeholder="Enter Email Address" size="18" maxlength=50>
+                <span id="availablitiy"></span>
+                <i class="fas fa-check-circle"></i>
+                <i class="fas fa-exclamation-circle"></i>
+                <small>Error message</small>
+            </div>
+            <div class="form-control-custom">
+                <label for="username">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter Password">
+                <i class="fas fa-check-circle"></i>
+                <i class="fas fa-exclamation-circle"></i>
+                <small>Error message</small>
+            </div>
+            <!-- <div class="form-control-custom">
+                <label for="username">Confirm Password</label>
+                <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Password">
+                <i class="fas fa-check-circle"></i>
+                <i class="fas fa-exclamation-circle"></i>
+                <small>Error message</small>
+            </div> -->
+            <div>
+                <button type="button" name="submit" >Submit</button>
+            </div>
+        </form>
+    </div>
+</body>
+
+</html>
