--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" [routerLink]="['home']">
       <img src="../../../assets/images/Login-App.png" width="150" height="50" class="d-inline-block align-top mr-3" alt="BootstrapLite Logo">
-    </a>
+    </a> -->
     <!-- Toggle button is activated on small screen -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
   
@@ -20,4 +20,19 @@
           </li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
+  <header class="headernav">
+    <div class="containernavbar">
+        <a [routerLink]="['home']"><img src="../../../assets/images/Login-App.png" alt="logo" class="logo"></a>
+            <h1 class="logo"></h1>
+            <nav>
+                <ul>
+                    <li><a [routerLink]="['home']">Home</a></li>
+                    <li><a [routerLink]="['login']">Login</a></li>
+                    <li><a [routerLink]="['signup']">Signup</a></li>
+                    <li><a   hidden>Logout</a></li>
+                    
+                </ul>
+            </nav>
+    </div>
+</header>
