--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,124 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:400,600");
+@font-face {
+  font-family: "Work Sans", sans-serif;
+  src: url('./assets/fonts/Work_Sans/WorkSans-VariableFont_wght.ttf') format("truetype");
+}
+
+
 body { 
     background: url(./assets/images/bgpic2.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
+    font-family: "Open Sans", sans-serif !important;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     color: #9b59b6;
   }
+
+
+  @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap");
+* {
+  box-sizing: border-box !important;
+}
+h2 {
+  color: #9b59b6;
+}
+.container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  border-radius: 5px;
+  align-items: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  width: 400px;
+  max-width: 100%;
+}
+.header {
+  border-bottom: 1px solid #f0f0f0;
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+}
+.header h2 {
+  margin: 0;
+}
+
+.form {
+  padding: 30px 40px;
+}
+
+.form-control-custom {
+  padding-bottom: 5px;
+  position: relative;
+}
+
+.form-control-custom label {
+  margin-bottom: 5px;
+}
+.form-control-custom input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  font-family: inherit;
+  font-size: 14px;
+  padding: 10px;
+  width: 100%;
+}
+.male {
+  position: absolute;
+}
+.female {
+  position: absolute;
+  top: 45px;
+}
+.form-control-custom input:focus {
+  outline: 0;
+  border-color: #777;
+}
+.form-control-custom.success input {
+  border-color: #2ecc71;
+}
+
+.form-control-custom.error input {
+  border-color: #e74c3c;
+}
+.form-control-custom i {
+  visibility: hidden;
+  position: absolute;
+  top: 35px;
+  right: 1px;
+}
+.form-control-custom.success i.fa-check-circle {
+  color: #2ecc71;
+  visibility: visible;
+}
+
+.form-control-custom.error i.fa-exclamation-circle {
+  color: #e74c3c;
+  visibility: visible;
+}
+.form-control-custom small {
+  color: #e74c3c;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.form-control-custom.error small {
+  visibility: visible;
+}
+.form button {
+  background-color: #8e44ad;
+  border: 2px solid #8e44ad;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-family: inherit;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
