--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,113 +1,95 @@
 <html>
+
 <body class="flex">
-    <!-- Connection to navbar -->
-    <!-- Using javascript validation -->
-    <!--<script defer src="./assets/js/signup.js"> </script>-->
-    <!-- Sign UP -->
-    <div class="container">
-        <form novalidate [formGroup]="signupForm" (ngSubmit)="save()"   class="form">
-            <div class="header">
-                <h2 style="color:#9b59b6">SignUp </h2>
-            </div>
-            <div class="form-control-custom">
-                <label for="username">First Name</label>
-                <input 
-                type="text" 
-                id="firstname" 
-                name="firstname"
-                placeholder="First Name"
-                formControlName="firstname" 
-                [ngClass]="{'is-invalid': (signupForm.get('firstname')?.touched || signupForm.get('firstname')?.dirty && !signupForm.valid)}"
-                />
-                <span class="invalid-feedback">
-                    <span *ngIf="signupForm.get('firstname')?.errors?.['required']">
-                      Please enter your first name.
-                    </span>
-                    <span *ngIf="signupForm.get('firstname')?.errors?.['minlength']">
-                      The first name must be longer than 3 characters.
-                    </span>
-                </span>
-            </div>
-            <div class="form-control-custom">
-                <label for="username">Last Name</label>
-                <input type="text" id="lastname" name="lastname" placeholder="Last Name"
-                formControlName="lastname" 
-                [ngClass]="{'is-invalid': (signupForm.get('lastname')?.touched || signupForm.get('lastname')?.dirty && !signupForm.valid)}"
-                 />
-                <span class="invalid-feedback">
-                    <span *ngIf="signupForm.get('lastname')?.errors?.['required']">
-                      Please enter your first name.
-                    </span>
-                    <span *ngIf="signupForm.get('lastname')?.errors?.['minlength']">
-                      The first name must be longer than 3 characters.
-                    </span>
-                </span>
-            </div>
-            <div class="form-control-custom">
-                <label for="username">Email</label>
-                <input type="email" id="emailid" name="emailid" placeholder="Enter Email Address"
-                formControlName="email" 
-                [ngClass]="{'is-invalid': (signupForm.get('email')?.touched || signupForm.get('email')?.dirty && !signupForm.valid)}"
-                 />
-                <span class="invalid-feedback">
-                    <span *ngIf="signupForm.get('email')?.errors?.['required']">
-                      Please enter your Email
-                    </span>
-                    <span *ngIf="signupForm.get('email')?.errors?.['email']">
-                        Please enter the Valid Email
-                    </span>
-                </span>
-            </div>
-            <div formGroupName="passwordGroup">
-            <div class="form-control-custom">
-                <label for="username">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter Password"
-                formControlName="password"
-                [ngClass]="{'is-invalid': signupForm.get('passwordGroup')?.errors ||
+  <div class="container">
+    <form novalidate [formGroup]="signupForm" (ngSubmit)="save()" class="form">
+      <div class="header">
+        <h2 style="color:#9b59b6">SignUp </h2>
+      </div>
+      <div class="form-control-custom">
+        <label for="username">First Name</label>
+        <input type="text" id="firstname" name="firstname" placeholder="First Name" formControlName="firstname"
+          [ngClass]="{'is-invalid': (signupForm.get('firstname')?.touched || signupForm.get('firstname')?.dirty && !signupForm.valid)}" />
+        <span class="invalid-feedback">
+          <span *ngIf="signupForm.get('firstname')?.errors?.['required']">
+            Please enter your first name.
+          </span>
+          <span *ngIf="signupForm.get('firstname')?.errors?.['minlength']">
+            The first name must be longer than 3 characters.
+          </span>
+        </span>
+      </div>
+      <div class="form-control-custom">
+        <label for="username">Last Name</label>
+        <input type="text" id="lastname" name="lastname" placeholder="Last Name" formControlName="lastname"
+          [ngClass]="{'is-invalid': (signupForm.get('lastname')?.touched || signupForm.get('lastname')?.dirty && !signupForm.valid)}" />
+        <span class="invalid-feedback">
+          <span *ngIf="signupForm.get('lastname')?.errors?.['required']">
+            Please enter your first name.
+          </span>
+          <span *ngIf="signupForm.get('lastname')?.errors?.['minlength']">
+            The first name must be longer than 3 characters.
+          </span>
+        </span>
+      </div>
+      <div class="form-control-custom">
+        <label for="username">Email</label>
+        <input type="email" id="emailid" name="emailid" placeholder="Enter Email Address" formControlName="email"
+          [ngClass]="{'is-invalid': (signupForm.get('email')?.touched || signupForm.get('email')?.dirty && !signupForm.valid)}" />
+        <span class="invalid-feedback">
+          <span *ngIf="signupForm.get('email')?.errors?.['required']">
+            Please enter your Email
+          </span>
+          <span *ngIf="signupForm.get('email')?.errors?.['email']">
+            Please enter the Valid Email
+          </span>
+        </span>
+      </div>
+      <div formGroupName="passwordGroup">
+        <div class="form-control-custom">
+          <label for="username">Password</label>
+          <input type="password" id="password" name="password" placeholder="Enter Password" formControlName="password"
+            [ngClass]="{'is-invalid': signupForm.get('passwordGroup')?.errors ||
                 ((signupForm.get('passwordGroup.password')?.touched || 
                 signupForm.get('passwordGroup.password')?.dirty) && 
-                 !signupForm.get('passwordGroup.password')?.valid) }" 
-                />
-                <span class="invalid-feedback">
-                    <span *ngIf="signupForm.get('passwordGroup.password')?.errors?.['required']">
-                      Please enter your Password.
-                    </span>
-                    <span *ngIf="signupForm.get('passwordGroup.password')?.errors?.['minlength']">
-                      The Password must be longer than 6 characters.
-                    </span>
-                </span>
-            </div>
-            <div class="form-control-custom">
-                <label for="username">Confirm Password</label>
-                <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Password"
-                formControlName="cpassword"
-                [ngClass]="{'is-invalid': signupForm.get('passwordGroup')?.errors ||
+                 !signupForm.get('passwordGroup.password')?.valid) }" />
+          <span class="invalid-feedback">
+            <span *ngIf="signupForm.get('passwordGroup.password')?.errors?.['required']">
+              Please enter your Password.
+            </span>
+            <span *ngIf="signupForm.get('passwordGroup.password')?.errors?.['minlength']">
+              The Password must be longer than 6 characters.
+            </span>
+          </span>
+        </div>
+        <div class="form-control-custom">
+          <label for="username">Confirm Password</label>
+          <input type="password" id="cpassword" name="cpassword" placeholder="Confirm Password"
+            formControlName="cpassword" [ngClass]="{'is-invalid': signupForm.get('passwordGroup')?.errors ||
                 ((signupForm.get('passwordGroup.cpassword')?.touched || 
                 signupForm.get('passwordGroup.cpassword')?.dirty) && 
-                 !signupForm.get('passwordGroup.cpassword')?.valid) }" 
-                />
-                <span class="invalid-feedback">
-                <span *ngIf="signupForm.get('passwordGroup.cpassword')?.errors?.['required']">
-                    Please enter your Password.
-                  </span>
-                  <span *ngIf="signupForm.get('passwordGroup.cpassword')?.errors?.['minlength']">
-                    The Password must be longer than 6 characters.
-                  </span>
-                    <span *ngIf="signupForm.get('passwordGroup')?.errors?.['match']">
-                        The confirmation does not match the Password.
-                      </span>
-                </span>
-            </div>
+                 !signupForm.get('passwordGroup.cpassword')?.valid) }" />
+          <span class="invalid-feedback">
+            <span *ngIf="signupForm.get('passwordGroup.cpassword')?.errors?.['required']">
+              Please enter your Password.
+            </span>
+            <span *ngIf="signupForm.get('passwordGroup.cpassword')?.errors?.['minlength']">
+              The Password must be longer than 6 characters.
+            </span>
+            <span *ngIf="signupForm.get('passwordGroup')?.errors?.['match']">
+              The confirmation does not match the Password.
+            </span>
+          </span>
         </div>
-                <button type="button" name="submit"
-                [title]="signupForm.valid ? 'Save Your entered data': 'Disabled'" 
-                 [disabled]="!signupForm.valid">Submit</button>
-                 <br>Dirty: {{ signupForm.dirty }}
+      </div>
+      <button type="submit" name="submit" [title]="signupForm.valid ? 'Save Your entered data': 'Disabled'"
+        [disabled]="!signupForm.valid">Submit</button>
+      <!-- <br>Dirty: {{ signupForm.dirty }}
                  <br>Touched: {{ signupForm.touched }}
                  <br>Valid: {{ signupForm.valid }}
-                 <br>Value: {{ signupForm.value | json }}
-        </form>
-    </div>
+                 <br>Value: {{ signupForm.value | json }} -->
+    </form>
+  </div>
 
 </body>
 
