--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
     <a class="navbar-brand" [routerLink]="['home']">
       <img src="../../../assets/images/Login-App.png" width="150" height="50" class="d-inline-block align-top mr-3" alt="BootstrapLite Logo">
     </a> -->
-    <!-- Toggle button is activated on small screen -->
-    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+<!-- Toggle button is activated on small screen -->
+<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
   
@@ -21,18 +21,21 @@
       </ul>
     </div>
   </nav> -->
-  <header class="headernav">
-    <div class="containernavbar">
-        <a [routerLink]="['home']"><img src="../../../assets/images/Login-App.png" alt="logo" class="logo"></a>
-            <h1 class="logo"></h1>
-            <nav>
-                <ul>
-                    <li><a [routerLink]="['home']">Home</a></li>
-                    <li><a [routerLink]="['login']">Login</a></li>
-                    <li><a [routerLink]="['signup']">Signup</a></li>
-                    <li><a   hidden>Logout</a></li>
-                    
-                </ul>
-            </nav>
-    </div>
+<header class="headernav">
+  <div class="containernavbar">
+    <a [routerLink]="['home']"><img src="../../../assets/images/Login-App.png" alt="logo" class="logo"></a>
+    <h1 class="logo"></h1>
+    <nav>
+      <ul>
+        <li *ngIf="isLoggedin"><a [routerLink]="['home']">Home</a></li>
+        <li *ngIf="isLoggedin"><a [routerLink]="['login']">Login</a></li>
+        <li *ngIf="isLoggedin"><a [routerLink]="['signup']">Signup</a></li>
+        <li *ngIf="!isLoggedin"><a [routerLink]="['welcome']">Welcome</a></li>
+        <li *ngIf="!isLoggedin"><a [routerLink]="['user']">User</a></li>
+        <li *ngIf="!isLoggedin"><a [routerLink]="['settings']">Settings</a></li>
+        <li *ngIf="!isLoggedin"><a (click)="logout()">Logout</a></li>
+
+      </ul>
+    </nav>
+  </div>
 </header>
