10 apirl commmits changes 10:PM

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -42,8 +42,8 @@
                 <small>Error message</small>
             </div> -->
             <div>
-                <button type="submit" name="submit" [title]="loginForm.valid ? 'Save Your entered data': 'Disabled'"
-                    [disabled]="!loginForm.valid">Submit</button>
+                <button type="submit" class="button" class="button" name="submit" [title]="loginForm.valid ? 'Save Your entered data':
+                'Disabled'" [disabled]="!loginForm.valid">Submit</button>
             </div>
         </form>
     </div>
