12 apirl commit 7:15 PM update user details

--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -82,9 +82,9 @@
           </span>
         </div>
       </div>
-      <<button type="submit" class="button" class="button" class="button" name="submit"
+      <button type="submit" class="button" class="button" class="button" name="submit"
         [title]="signupForm.valid ? 'Save Your entered data': 'Disabled'" [disabled]="!signupForm.valid">Submit</button>
-        <!-- <br>Dirty: {{ signupForm.dirty }}
+      <!-- <br>Dirty: {{ signupForm.dirty }}
                  <br>Touched: {{ signupForm.touched }}
                  <br>Valid: {{ signupForm.valid }}
                  <br>Value: {{ signupForm.value | json }} -->
