--- a/frontend/src/app/components/welcome/user/user.component.html
+++ b/frontend/src/app/components/welcome/user/user.component.html
@@ -11,8 +11,7 @@
                 <ag-grid-angular style="width: 800px; height: 300px;" class="ag-theme-alpine"
                     [defaultColDef]="defaultColDef" [rowData]="rowData | async" [columnDefs]="columnDefs"
                     (firstDataRendered)="onFirstDataRendered($event)" rowSelection="multiple"
-                    (cellClicked)="onCellClicked(params)" (cellValueChanged)="onCellValueChanged($event)"
-                    [frameworkComponents]="frameworkComponents">
+                    (cellValueChanged)="onCellValueChanged($event)" [frameworkComponents]="frameworkComponents">
                 </ag-grid-angular>
             </div>
             <div *ngIf="is_admin == 1">
